[gd_scene load_steps=4 format=3 uid="uid://b3jyuprf7rhpo"]

[ext_resource type="Script" path="res://godot4/effects/IsoPolygon.gd" id="1_1ihem"]

[sub_resource type="GDScript" id="GDScript_o4h2c"]
script/source = "extends Line2D

var _height : float = 0.0
var _show_edges : bool = true
var _edge_points : PackedVector2Array = []

func set_height(v: float) -> void:
	_height = v
	
func set_show_edges(v: bool) -> void:
	_show_edges = v
	
func set_edge_points(v: PackedVector2Array) -> void:
	_edge_points = v

func _draw() -> void:
	if not _show_edges:
		return
		
	for point in _edge_points:
		if point.y >= 0:
			draw_line(point, point+Vector2(0,_height), Color.WHITE, width)
"

[sub_resource type="GDScript" id="GDScript_vubfs"]
script/source = "extends Line2D

var _height : float = 0.0
var _show_edges : bool = true

func set_height(v: float) -> void:
	_height = v
	
func set_show_edges(v: bool) -> void:
	_show_edges = v

func _draw() -> void:
	if not _show_edges:
		return
		
	for point in points:
		if point.y < 0:
			draw_line(point, point+Vector2(0,-_height), Color.WHITE, width)
"

[node name="IsoPolygon" type="Node2D"]
script = ExtResource("1_1ihem")
show_edges = null

[node name="Polygon2D" type="Polygon2D" parent="."]
unique_name_in_owner = true
modulate = Color(0.12549, 0.482353, 1, 1)
z_index = 8
z_as_relative = false
color = Color(1, 1, 1, 0.2)

[node name="FrontPolygon2D" type="Polygon2D" parent="."]
unique_name_in_owner = true
modulate = Color(0.12549, 0.482353, 1, 1)
z_index = -5
z_as_relative = false

[node name="TopLine2D" type="Line2D" parent="."]
unique_name_in_owner = true
modulate = Color(0.12549, 0.482353, 1, 1)
self_modulate = Color(2, 2, 2, 1)
z_index = 8
z_as_relative = false
closed = true
width = 6.0

[node name="OutLine2D" type="Line2D" parent="."]
unique_name_in_owner = true
modulate = Color(0, 0.433333, 1, 1)
self_modulate = Color(2, 2, 2, 1)
z_index = -3
z_as_relative = false
closed = true
width = 6.0
script = SubResource("GDScript_o4h2c")

[node name="UnderLine2D" type="Line2D" parent="."]
unique_name_in_owner = true
modulate = Color(0, 0.435294, 1, 1)
self_modulate = Color(1, 1, 1, 0.4)
z_index = -4
z_as_relative = false
closed = true
width = 6.0
script = SubResource("GDScript_vubfs")
